--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@mantine/core": "^5.5.5",
+    "@mantine/dates": "^5.5.5",
+    "@mantine/dropzone": "^5.5.5",
     "@mantine/form": "^5.5.5",
     "@mantine/hooks": "^5.5.5",
+    "@tabler/icons": "^1.104.0",
     "add": "^2.0.6",
+    "dayjs": "^1.11.5",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.2.0",
     "framer-motion": "^7.5.3",
@@ -31,6 +35,7 @@
     "next-seo": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tabler-icons-react": "^1.55.0",
     "yarn": "^1.22.19",
     "zustand": "^4.1.2"
   },
