--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-seo": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.0",
     "tabler-icons-react": "^1.55.0",
     "yarn": "^1.22.19",
     "zustand": "^4.1.2"
