--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.0",
+    "swr": "^1.3.0",
     "tabler-icons-react": "^1.55.0",
     "yarn": "^1.22.19",
     "zustand": "^4.1.2"
