--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@mantine/form": "^5.5.5",
     "@mantine/hooks": "^5.5.5",
     "@tabler/icons": "^1.104.0",
-    "add": "^2.0.6",
+    "axios": "^1.1.3",
     "dayjs": "^1.11.5",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.2.0",
@@ -38,7 +38,6 @@
     "react-intersection-observer": "^9.4.0",
     "swr": "^1.3.0",
     "tabler-icons-react": "^1.55.0",
-    "yarn": "^1.22.19",
     "zustand": "^4.1.2"
   },
   "devDependencies": {
@@ -56,7 +55,6 @@
     "autoprefixer": "^10.4.12",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.13",
-    "cypress": "^10.10.0",
     "eslint": "^8.25.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
